<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/bgm1"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShow5Stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFD580"
            android:fontFamily="cursive"
            android:text="@string/btnShow5Stars"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnShowAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFD580"
            android:fontFamily="cursive"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:text="@string/btnShowAll" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants" >

    </ListView>

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFD580"
        android:fontFamily="cursive"
        android:text="@string/btnInsert"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>